crates/index-scheduler/src/snapshots/lib.rs/test_document_addition_with_bad_primary_key/documents.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "id": 2,
    "doggo": "jean bob"
  },
  {
    "id": 4,
    "doggo": "jean bob"
  }
]
